--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h3></h3>
-            <form name="login" action="{{url_for('home')}}" method="post">
+            <form name="login" action="" method="post">
                 <label for="username"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" name="username" required>
                 <br>
