--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,7 +2,20 @@
     {% extends "layout.html" %}
    
     {% block content %}
-    <h2 class="center">HOME PAGE</h2>
+    <h2 class="text-center">HOME PAGE</h2>
+     {% with messages = get_flashed_messages(with_categories=true) %} 
+         {% if messages %} 
+         {% for category, message in messages %}
+         <div class="alert alert-{{category}}">
+           <p> {{ message }}</p>
+        </div>
+    {% endfor %} 
+    {% endif %} 
+    {% endwith %}
+    <a href="{{url_for('patient_registration')}}">Patient Registration</a>
+            {% block forms %}
+            {% endblock %}
+    <p>{{access}}</p>
 
     
     {% endblock %}
