--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -15,6 +15,7 @@
     <a style="float: left; display: inline-block; margin-right: 15px;" href="{{url_for('patient_registration')}}">Patient Registration</a>
     <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('update_patient')}}">Update Patient</a>
     <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('home')}}">Home</a>
+    <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('delete_patient')}}">Delete Patient</a>
             {% block forms %}
             {% endblock %}
     <!-- <p>{{access}}</p> -->
