--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -40,7 +40,7 @@ hr {
     border: 0 none;
 }
 
-input[type=text], input[type=password] {
+/*input[type=text], input[type=password] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -52,7 +52,7 @@ input[type=text], input[type=password] {
 input[type=text]:focus, input[type=password]:focus {
     background-color: #ddd;
     outline: none;
-}
+}*/
 
 .top-container {
     background: #ccc;
@@ -96,3 +96,10 @@ footer {
     opacity: 1;
 }
 
+.jumbotron{
+    background-color: blue;
+}
+
+.box{
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
