--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -18,6 +18,7 @@
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('home')}}">Home</a>
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('delete_patient')}}">Delete Patient</a>
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('search_patient')}}">Search Patient</a>
+        <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('pharmacy')}}">Search Pharmacy</a>
 
     </div>
     <br clear="both">
