--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,16 +2,23 @@
 <html>
 
 <head>
-    <title>UTA - Home Page</title>
+    <title>ABC - Home Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+          <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
     <link rel="stylesheet" href="static/css/main.css"/>
 </head>
 <body>
 
+<div class="jumbotron">
+	<h1 class="text-center" style="color:white;">ABC HOSPITAL MANAGEMENT SYSTEM</h1>
+</div>
 
 <div class="container">
-	<h1 class="text-center">ABC HOSPITAL MANAGEMENT SYSTEM</h1>
+	
+	
 
 	<!-- block to load child template -->
     {% block content %}
