--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -19,6 +19,7 @@
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('delete_patient')}}">Delete Patient</a>
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('search_patient')}}">Search Patient</a>
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('pharmacy')}}">Search Pharmacy</a>
+         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('diagonistics')}}">Diagonistics</a>
 
     </div>
     <br clear="both">
