--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -20,6 +20,7 @@
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('search_patient')}}">Search Patient</a>
         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('pharmacy')}}">Search Pharmacy</a>
          <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('diagonistics')}}">Diagonistics</a>
+         <a style="float: left; display: inline-block;margin-right: 15px;" href="{{url_for('billing')}}">Billing</a>
 
     </div>
     <br clear="both">
